# petshop-autocrud

./: 01_initdb.sh  README.md  compose-db.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_12_20_1641-8c3db4489ecf_initial_revision.py
src/petshop/: app.py  demo.py  routers.py
src/petshop/core/: config.py  database.py  exceptions.py
src/petshop/mixins/: __init__.py  base.py  create.py  delete.py  patch.py  read.py  search.py
src/petshop/models/: __init__.py  human.py  pet.py
src/petshop/utils/: __init__.py  parse_fields.py  serializer.py
